--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -79,17 +79,26 @@
 		<div class='ui-header'> Strand v2 &mdash; {{ strandV2List|length }} accounts </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row-header' >
+				<th class='before b-r' colspan='5' > </th>
+				<th class='actions b-r' colspan='4'> Action_type </th>
+				<th class='notifications b-r' colspan='2'> Notifications </th>
+				<th class='location b-r' colspan='2'> Location </th>
+				<th class='after' colspan='7' > </th>
+			</tr>
+			<tr class='ui-row-header' >
 				<td class='userid b-r'> ID </td>
 				<td class='name b-r'> Name </td>
 				<td class='created b-r'> Created </td>
-				<td class='db-count center b-r'> Metadata <br> Only </td>
+				<td class='db-count center b-r'> Metadata </td>
 				<td class='thumbs center b-r'> Photos <br> (7d | all) </td>
-				<td class='strands center b-r'> Strands <br> (7d) </td>
-				<td class='actions center b-r'> Actions <br> (7d | all) </td>
-				<td class='notifications center b-r'> Nots sent <br> (7d)</td>
-				<td class='last-not-timestamp b-r'> Last Not. <br> Timestamp </td>
-				<td class='location b-r'> Location </td>
-				<td class='location-timestamp b-r'> Location <br> Timestamp </td>
+				<td class='strands_created center b-r'> Strands <br> Created (7d) </td>
+				<td class='strands_joined center b-r'> Strands <br> Joined (7d) </td>
+				<td class='photos_added center b-r'> Photos <br> Added (7d) </td>
+				<td class='favs center b-r'> Favs <br> (7d) </td>
+				<td class='notifications center b-r'> Sent <br> (7d)</td>
+				<td class='last-not-timestamp b-r'> Last Timestamp </td>
+				<td class='location b-r'> GPS </td>
+				<td class='location-timestamp b-r'> Timestamp </td>
 				<td class='contacts b-r'> Friends | <br> Contacts </td> 
 				<td class='last-build b-r'> Last <br> Build </td>
 				<td class='last-uploaded-timestamp b-r'> Last Upload </td>
@@ -101,8 +110,10 @@
 				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
 				<td class='db-count right b-r'>	{{ entry.metadataCount }} </td>		
 				<td class='thumbs right b-r'> {{ entry.weeklyPhotos }} | {{ entry.user.thumbsCount }} </td>
-				<td class='strand right b-r'> {{entry.weeklyStrands }} </td>
-				<td class='actions right b-r'> {{entry.weeklyActions }} | {{ entry.actions}}</td>
+				<td class='strands_created center b-r'> {{ entry.weeklyStrandsCreated }} </td>
+				<td class='strands_joined center b-r'> {{ entry.weeklyStrandsJoined }} </td>
+				<td class='photos_added center b-r'> {{ entry.weeklyPhotosAdded }} </td>
+				<td class='favs center b-r'> {{entry.weeklyFavs }} </td>
 				<td class='notifications right b-r'> {{ entry.notifications }} </td>
 				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>				
 				<td class='location right b-r'> 
