--- a/strand/iOS/Strand/Strand/DFStrandGalleryViewController.xib
+++ b/strand/iOS/Strand/Strand/DFStrandGalleryViewController.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -115,6 +114,7 @@
                 <constraint firstItem="PHW-KG-z5B" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zPg-Sh-Vd0"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
+            <point key="canvasLocation" x="113" y="130"/>
         </view>
     </objects>
     <resources>
